# Hackathon-Todo-AI-Evolution

./: .gitignore  CLAUDE.md  PHASE_I.md  PHASE_II.md  README.md
.specify/memory/: constitution.md
history/prompts/general/: 0001-initialize-github-repository.general.prompt.md
history/prompts/phase-1-cli-todo-app/: 1-create-todo-app-specification.spec.prompt.md  2-create-todo-app-implementation-plan.plan.prompt.md  3-create-todo-app-tasks-breakdown.tasks.prompt.md  4-implement-complete-todo-app.implementation.prompt.md
phase1-console/: README.md  __init__.py  main.py  pyproject.toml
phase1-console/todo_app/managers/: task_manager.py
phase1-console/todo_app/models/: task.py
phase1-console/todo_app/ui/: console_ui.py
phase_2_full_stack_web_application/backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
phase_2_full_stack_web_application/backend/alembic/: env.py
phase_2_full_stack_web_application/backend/src/: config.py  database.py  main.py
phase_2_full_stack_web_application/frontend/: .eslintignore  .gitignore  .prettierignore  CLAUDE.md  Dockerfile.dev  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
phase_2_full_stack_web_application/frontend/animation/: todo.json
phase_2_full_stack_web_application/frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
phase_2_full_stack_web_application/frontend/components/: AnimatedPageWrapper.tsx  Header.tsx  (+17 more)
specs/phase-1-cli/: constitution.md  plan.md  specs.md  tasks.md
(+65 files in other folders)
