[project]
name = "cli-todo-app"
version = "1.0.0"
description = "A console-based todo application"
authors = [{name = "Taha Saif", email = "tahasaif454@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
todo-app = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0"
]